# elgua

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  deploy.sh
k8s/: deployment.yaml
k8s/storage/: elgua.yaml  pg.yaml
src/: cfg.rs  error.rs  event.rs  handler.rs  interaction.rs  lib.rs  main.rs  route.rs  track.rs  util.rs  ytdl.rs
src/audio/: cache.rs  metadata.rs  mod.rs  scdl.rs  source.rs  ytdl.rs
src/component/: mod.rs  play_button.rs  select_menu.rs
src/controller/: mod.rs  play.rs  stop.rs  track.rs  volume.rs
src/handler/: mod.rs  play.rs  volume.rs
src/route/: mod.rs
src/store/: cfg.rs  history.rs  mod.rs  track_queue.rs
src/store/search/: history.rs  mod.rs
src/usecase/: mod.rs  play.rs  stop.rs  track.rs  volume.rs
