[package]
name = "elgua"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
chrono = "0.4.22"
log = "0.4.17"
reqwest = "0.11.11"
sai = "0.1.4"
serde = "1.0.144"
serde_json = "1.0.85"
serenity = { version = "0.11.5", features = ["voice"] }
simple_logger = "2.3.0"
songbird = "0.3.0"
sqlx = { version = "0.6.1", features = ["postgres", "uuid", "chrono", "runtime-tokio-rustls"]}
thiserror = "1.0.34"
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread", "rt", "sync", "signal", "process"] }
