[package]
name = "elgua"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
chrono = "0.4"
futures = "0.3"
http = "0.2"
log = "0.4"
reqwest = "0.11"
sai = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_qs = "0.11"
serenity = { version = "0.11", features = ["voice"] }
simple_logger = "4.0"
songbird = { version = "0.3" }
sqlx = { version = "0.6", features = ["offline", "postgres", "uuid", "chrono", "runtime-tokio-rustls"] }
# tantivy = "0.18.0"
thiserror = "1.0"
tokio = { version = "1.25", features = ["macros", "rt-multi-thread", "rt", "sync", "signal", "process", "fs"] }
# toshi = { git = "https://github.com/toshi-search/Toshi", rev = "2caf73e" }
# toshi = { git = "https://github.com/syrflover/Toshi", branch = "ko" }
# toshi = { path = "../toshi/toshi-client" }
openssl = { version = "0.10", features = ["vendored"] }
youtube_dl = { version = "0.8", features = ["tokio", "downloader"] }
either = "1.8.1"
