[package]
name = "elgua"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "elgua"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
chrono = "0.4"
futures = "0.3"
http = "1.3"
log = "0.4"
reqwest = "0.12"
sai = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_qs = "0.15"
serenity = { version = "0.12", features = ["voice"] }
simple_logger = "5.0"
songbird = { version = "0.5" }
sqlx = { version = "0.8", features = [
    # "offline",
    "postgres",
    "uuid",
    "chrono",
    "runtime-tokio-rustls",
] }
thiserror = "2.0"
tokio = { version = "1.47", features = [
    "macros",
    "rt-multi-thread",
    "rt",
    "sync",
    "signal",
    "process",
    "fs",
] }
# toshi = { git = "https://github.com/toshi-search/Toshi", rev = "2caf73e" }
# toshi = { git = "https://github.com/syrflover/Toshi", branch = "ko" }
# toshi = { path = "../toshi/toshi-client" }
youtube_dl = { version = "0.10", features = ["downloader-rustls-tls"] }
either = "1.15"
trait-variant = "0.1.2"
symphonia = { version = "0.5", features = ["all"] }
tap = "1.0.1"
# tantivy = "0.25.0"

[target.'cfg(target_env = "musl")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
